--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "finwing1.0": "file:",
     "framer-motion": "^11.3.31",
     "react": "^18.3.1",
+    "react-alice-carousel": "^2.9.1",
     "react-dom": "^18.3.1",
     "react-intersection-observer": "^9.13.0",
     "react-router-dom": "^6.26.1",
     "react-scroll": "^1.9.0",
     "react-scroll-parallax": "^3.4.5",
-    "react-tsparticles": "^1.18.11"
+    "react-tsparticles": "^1.18.11",
+    "swiper": "^11.1.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
