--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "react-router-dom": "^6.26.1",
     "react-scroll": "^1.9.0",
     "react-scroll-parallax": "^3.4.5",
+    "react-timeline-animation": "^1.2.3",
     "react-tsparticles": "^1.18.11",
-    "swiper": "^11.1.12"
+    "sass": "^1.78.0",
+    "swiper": "^6.8.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
