--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
     "canvas": "^2.11.2",
+    "emailjs-com": "^3.2.0",
     "finwing1.0": "file:",
     "framer-motion": "^11.3.31",
     "react": "^18.3.1",
